--- a/admin/html/viewUsers.html
+++ b/admin/html/viewUsers.html
@@ -17,7 +17,7 @@
                 <li><a class="btn" href="./viewOrders.html">Order</a></li>
             </ul>
             <ul>
-                <li><a href="../../../frontend_html-css-js/pages/logout.html">Log-Out</a></li>
+                <li><a href="../../pages/logout.html">Log-Out</a></li>
             </ul>
         </div>
     </div>
