--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- sign-up css -->
     <link rel="stylesheet" href="../assets/css/sign-up.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
     <title>Document</title>
 </head>
 <body>
